--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
     "cors": "^2.8.5",
+    "cron": "^2.1.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "express-jwt": "^5.3.1",
@@ -31,6 +32,7 @@
     "helmet": "^3.15.1",
     "is-empty": "^1.2.0",
     "jsdom": "^19.0.0",
+    "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.16.0",
     "nodemailer": "^6.6.0",
